# lib-log

./: CMakeLists.txt
inc/: log.h
src/: CMakeLists.txt  color.c  color.h  log.c
tests/: CMakeLists.txt  main.c
